--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,8 @@ services:
       - "3000:3000"
     restart: always
     volumes:
-      - frontend:/app
+        - ./frontend:/app
+        - /app/node_modules
     depends_on:
       - backend
 
