feat(backend): coloquei o backend para funcionar e refiz o dockerfile para usar multistage build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-FROM bitnami/java:24.0.1-11-debian-12-r5
-
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
-
 COPY . .
+RUN mvn clean package -DskipTests
 
-RUN ./mvnw package
 
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
-
-CMD ["java", "-jar", "target/app.jar"]
+CMD ["java", "-jar", "app.jar"]
